[package]
name = "strawberry-mod-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
dotenvy = "0.15.7"
once_cell = "1.19.0"
phf = { version = "0.11.2", features = ["macros"] }
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls"] }
rmp-serde = "1.1.2"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.1", features = ["rt", "macros"] }
toml_edit = "0.21.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
twilight-cache-inmemory = { version = "0.15.4"}
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-interactions = "0.15.2"
twilight-model = "0.15.4"
twilight-util = { version = "0.15.4", features = ["permission-calculator"] }
twl-fw = { version = "0.3.0", git="https://github.com/vincent-sparks/twl-fw.git", features = ["twilight-cache-inmemory"] }
varint-rs = "2.2.0"
smb_log_format={git="https://github.com/vincent-sparks/smb_log_format.git"}
